--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ProjectVerDown</title>
+    <title>ProjectVerDown
+      <br>ProjectVerCheck
+    </title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
