--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ProjectVerDown
-      <br>ProjectVerCheck
-    </title>
+    <title>ProjectVerDown/ProjectVerCheck</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
