--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ProjectVerDown/ProjectVerCheck</title>
+    <title>ProjectVerDown/Check</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">ProjectVerDown</h1>
+    <h1 class="title">ProjectVerDown/ProjectVerCheck</h1>
     <p>(C)884tak</p>
     <h3 class="title2">Privacy Policy</h3>
     <p>This application works offline. We do not collect personal information of users.</p>
