--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">ProjectVerDown/ProjectVerCheck</h1>
+    <h1 class="title">ProjectVerDown / ProjectVerCheck</h1>
     <p>(C)884tak</p>
     <h3 class="title2">Privacy Policy</h3>
     <p>This application works offline. We do not collect personal information of users.</p>
